# allclear

./: README.md  biomes.py  download.py  download.sbatch  download_shapefile.py  filter_datasets.py  make_s2_only.py  pick_roi.py  pyproject.toml
allclear/: benchmark.py  dataset.py
scripts/: hydrate_pod.sh  pack_runpod_subset.sh
