[project]
name = "allclear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "geopandas>=1.1.4",
  "rasterio>=1.5.0",
  "requests>=2.34.2",
  "torch>=2.12.1",
  "tqdm>=4.68.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
